[gd_scene load_steps=4 format=3 uid="uid://dqkau74maa1du"]

[ext_resource type="Script" path="res://Scripts/Panels/tech_panel.gd" id="1_v5auy"]
[ext_resource type="Texture2D" uid="uid://rlatq16k3ek2" path="res://Textures/button_triangle.png" id="4_rd6vl"]

[sub_resource type="LabelSettings" id="LabelSettings_b45h1"]
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="TechPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5auy")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0.603922, 0.721569, 0.392157)
polygon = PackedVector2Array(640, 0, 640, 576, 0, 576, 0, 0)

[node name="TechLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 96.0
text = "Technologia"
label_settings = SubResource("LabelSettings_b45h1")
horizontal_alignment = 1

[node name="BasicTech" type="Control" parent="."]
anchors_preset = 0
offset_top = 416.0
offset_right = 640.0
offset_bottom = 544.0

[node name="MaterialsTechButton" type="TextureButton" parent="BasicTech"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 128.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="BasicTech/MaterialsTechButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="BasicTech/MaterialsTechButton"]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 128.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GoldTechButton" type="TextureButton" parent="BasicTech"]
layout_mode = 0
offset_left = 272.0
offset_top = 32.0
offset_right = 368.0
offset_bottom = 128.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="BasicTech/GoldTechButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="BasicTech/GoldTechButton"]
layout_mode = 0
offset_left = -16.0
offset_top = -32.0
offset_right = 112.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ScienceTechButton" type="TextureButton" parent="BasicTech"]
layout_mode = 0
offset_left = 480.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 96.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="BasicTech/ScienceTechButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="BasicTech/ScienceTechButton"]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 128.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AdvancedTech" type="Control" parent="."]
anchors_preset = 0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 384.0

[node name="MaterialsGoldTechButton" type="TextureButton" parent="AdvancedTech"]
layout_mode = 0
offset_left = 192.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 96.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="AdvancedTech/MaterialsGoldTechButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="AdvancedTech/MaterialsGoldTechButton"]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 128.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GoldScienceTechButton" type="TextureButton" parent="AdvancedTech"]
layout_mode = 0
offset_left = 352.0
offset_top = 32.0
offset_right = 448.0
offset_bottom = 128.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="AdvancedTech/GoldScienceTechButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="AdvancedTech/GoldScienceTechButton"]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 128.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MasterTech" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 96.0
offset_right = 640.0
offset_bottom = 224.0

[node name="MasterButton" type="TextureButton" parent="MasterTech"]
layout_mode = 0
offset_left = 272.0
offset_top = 32.0
offset_right = 368.0
offset_bottom = 128.0
texture_normal = ExtResource("4_rd6vl")

[node name="TechBar" type="ProgressBar" parent="MasterTech/MasterButton"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 112.0
step = 1.0
show_percentage = false

[node name="CostLabel" type="Label" parent="MasterTech/MasterButton"]
layout_mode = 0
offset_left = -80.0
offset_top = -32.0
offset_right = 176.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="button_down" from="BasicTech/MaterialsTechButton" to="." method="_on_tech_button_down" binds= [0]]
[connection signal="button_down" from="BasicTech/GoldTechButton" to="." method="_on_tech_button_down" binds= [1]]
[connection signal="button_down" from="BasicTech/ScienceTechButton" to="." method="_on_tech_button_down" binds= [2]]
[connection signal="button_down" from="AdvancedTech/MaterialsGoldTechButton" to="." method="_on_tech_button_down" binds= [3]]
[connection signal="button_down" from="AdvancedTech/GoldScienceTechButton" to="." method="_on_tech_button_down" binds= [4]]
[connection signal="button_down" from="MasterTech/MasterButton" to="." method="_on_tech_button_down" binds= [5]]
